fixing nav icon spacing and other dimensions in nav, responsive stuff too

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -187,11 +187,12 @@ h4{
 .top-bar-section ul li:hover{
 	// height:44px;
 }
-.top-bar-section ul li a.soc-link{
-	line-height: 2.8rem !important;
+#navbar ul li a.soc-link{
+	// line-height: 2.8rem !important;
 	// padding:0 !important;
 	margin:0 !important;
-	font-size:24px;
+	// font-size:24px;
+	font-size:1rem;
 }
 // .top-bar {
 //   background: $black-op85;
